Ported to Ikonli.