@@ -23,12 +23,15 @@ import java.awt.event.KeyEvent;
 
 import javax.swing.KeyStroke;
 
+import org.kordamp.ikonli.carbonicons.CarbonIcons;
+
 import com.sshtools.ui.swing.AppAction;
 
 /**
  * Abstract implementation of an {@link AppAction}that can be used to edit a
  * connection profile.
  */
+@SuppressWarnings("serial")
 public abstract class AbstractConnectionPropertiesAction extends AbstractAppAction {
 
 	public final static String VAL_NAME = Messages.getString("AbstractConnectionPropertiesAction.Name");
@@ -40,18 +43,15 @@ public abstract class AbstractConnectionPropertiesAction extends AbstractAppActi
 	 */
 	public AbstractConnectionPropertiesAction() {
 		putValue(NAME, VAL_NAME);
-		putValue(SMALL_ICON, loadIcon("document-properties", 16));
-		putValue(MEDIUM_ICON, loadIcon("document-properties", 24));
+		putValue(SMALL_ICON, loadIcon(CarbonIcons.EDIT, 16));
+		putValue(MEDIUM_ICON, loadIcon(CarbonIcons.EDIT, 24));
 		putValue(SHORT_DESCRIPTION, Messages.getString("AbstractConnectionPropertiesAction.ShortDesc"));
 		putValue(LONG_DESCRIPTION, Messages.getString("AbstractConnectionPropertiesAction.LongDesc"));
-		putValue(MNEMONIC_KEY, new Integer('t'));
-		putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_MASK | InputEvent.CTRL_MASK));
-		putValue(ON_MENUBAR, new Boolean(true));
+		putValue(MNEMONIC_KEY, Integer.valueOf('t'));
+		putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_DOWN_MASK | InputEvent.CTRL_DOWN_MASK));
+		putValue(ON_MENUBAR, Boolean.valueOf(true));
 		putValue(MENU_NAME, "Edit");
-		putValue(MENU_ITEM_GROUP, new Integer(80));
-		putValue(MENU_ITEM_WEIGHT, new Integer(10));
-//		putValue(ON_TOOLBAR, new Boolean(true));
-//		putValue(TOOLBAR_GROUP, new Integer(85));
-//		putValue(TOOLBAR_WEIGHT, new Integer(60));
+		putValue(MENU_ITEM_GROUP, Integer.valueOf(80));
+		putValue(MENU_ITEM_WEIGHT, Integer.valueOf(10));
 	}
 }
