@@ -24,6 +24,8 @@ import java.awt.event.KeyEvent;
 
 import javax.swing.KeyStroke;
 
+import org.kordamp.ikonli.carbonicons.CarbonIcons;
+
 import com.sshtools.ui.swing.AppAction;
 
 /**
@@ -39,17 +41,17 @@ public abstract class AbstractPrintAction extends AbstractAppAction {
 	 */
 	public AbstractPrintAction() {
 		putValue(NAME, Messages.getString("AbstractPrintAction.Name"));
-		putValue(SMALL_ICON, loadIcon("document-print", 16));
-		putValue(MEDIUM_ICON, loadIcon("document-print", 24));
+		putValue(SMALL_ICON, loadIcon(CarbonIcons.PRINTER, 16));
+		putValue(MEDIUM_ICON, loadIcon(CarbonIcons.PRINTER, 24));
 		putValue(SHORT_DESCRIPTION,
 				Messages.getString("AbstractPrintAction.ShortDesc"));
 		putValue(LONG_DESCRIPTION,
 				Messages.getString("AbstractPrintAction.LongDesc"));
-		putValue(MNEMONIC_KEY, new Integer('p'));
+		putValue(MNEMONIC_KEY, Integer.valueOf('p'));
 		putValue(
 				ACCELERATOR_KEY,
-				KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_MASK
-						+ InputEvent.CTRL_MASK));
+				KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_DOWN_MASK
+						+ InputEvent.CTRL_DOWN_MASK));
 		putValue(ON_MENUBAR, true);
 		putValue(MENU_NAME, "File");
 		putValue(MENU_ITEM_GROUP, 80);
