@@ -32,6 +32,7 @@ import com.sshtools.ui.swing.EmptyIcon;
  * Concrete implementation of an {@link AppAction} that will toggles whether the
  * toolbar is visible or not.
  */
+@SuppressWarnings("serial")
 public class ToggleToolBarAction extends AppAction {
 	// Private instance variables
 	private SshToolsApplicationPanel panel;
@@ -46,18 +47,18 @@ public class ToggleToolBarAction extends AppAction {
 		putValue(NAME, Messages.getString("ToggleToolBarAction.Name"));
 		putValue(SHORT_DESCRIPTION, Messages.getString("ToggleToolBarAction.ShortDesc"));
 		putValue(SMALL_ICON, new EmptyIcon(16, 16));
-		putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_B, InputEvent.ALT_MASK | InputEvent.CTRL_MASK));
+		putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_B, InputEvent.ALT_DOWN_MASK | InputEvent.CTRL_DOWN_MASK));
 		putValue(LONG_DESCRIPTION, Messages.getString("ToggleToolBarAction.LongDesc"));
-		putValue(MNEMONIC_KEY, new Integer('t'));
-		putValue(ON_MENUBAR, new Boolean(true));
+		putValue(MNEMONIC_KEY, Integer.valueOf('t'));
+		putValue(ON_MENUBAR, Boolean.valueOf(true));
 		putValue(MENU_NAME, "View");
-		putValue(MENU_ITEM_GROUP, new Integer(90));
-		putValue(MENU_ITEM_WEIGHT, new Integer(0));
+		putValue(MENU_ITEM_GROUP, Integer.valueOf(90));
+		putValue(MENU_ITEM_WEIGHT, Integer.valueOf(0));
 		putValue(IS_TOGGLE_BUTTON, Boolean.TRUE);
 		putValue(IS_SELECTED, Boolean.valueOf(panel.isToolBarVisible()));
 		putValue(AppAction.ON_CONTEXT_MENU, Boolean.TRUE);
-		putValue(AppAction.CONTEXT_MENU_GROUP, new Integer(95));
-		putValue(AppAction.CONTEXT_MENU_WEIGHT, new Integer(10));
+		putValue(AppAction.CONTEXT_MENU_GROUP, Integer.valueOf(95));
+		putValue(AppAction.CONTEXT_MENU_WEIGHT, Integer.valueOf(10));
 	}
 
 	/*
